alignments fixed

--- a/css/integration.css
+++ b/css/integration.css
@@ -264,7 +264,49 @@ font-size: 20px;
 }
 }
 
-
+box
 .bt{
     margin-bottom: 20%;
+}
+@media only screen and (max-width: 399px) {
+    .bigc{
+        text-align: center!important;
+        padding-left: 11%!important;
+    }
+    .bigcmr{
+        max-width: 320px!important;
+    }
+    .shpfy{
+        text-align: center!important;
+        padding-left: 0%!important;
+    }
+    .connect_button{
+        width:88%!important
+    }
+    .mrg{
+        padding-bottom: 1%!important;
+    }
+    
+}
+
+
+@media only screen and (max-width: 749px) and (min-width: 400px) {
+.bigcmr{
+    max-width: 320px!important;
+}
+.shpfy{
+    text-align: center!important;
+    padding-left: 0%!important;
+}
+.bigc{
+    text-align: center!important;
+    padding-left: 23%!important;
+}
+.mrg{
+    padding-bottom: 1%!important;
+}
+.connect_button{
+    width:88%!important
+}
+
 }
